docs/tests/parser/interface/invalid/InterfaceVarMissingSemi.b
interface IFoo {
    let int x
    fn void foo();
}
